# ecommerce_data_analysis

./: .gitignore  Dockerfile  README.md  docker-compose-others.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: .gitignore
.github/workflows/: ci-dev.yml  ci-homolog-airflow-dag.yml  ci-homolog-docker-image-airflow.yml  ci-homolog-k8s-cronjob-app-amazon.yml  ci-homolog-k8s-cronjob-app-ml.yml  ci-k8s-cronjob-app-ml.yml  test-dev.yml  test-homolog.yml
airflow/: .gitignore
airflow/dags/: fastapi_communication.py  ws_amazon.py  ws_amazon_dag.py  ws_amazon_docker_dag.py  ws_amazon_kubernetes_dag.py  ws_mercado_livre.py  ws_mercado_livre_dag.py
dags/: fastapi_communication.py  ws_mercado_livre.py
docker/airflow/: Dockerfile  Dockerfile.dev
docker/chromium_driver/: Dockerfile  Dockerfile.prod
docker/python_3_12/: Dockerfile  Dockerfile.dev
docker/selenium_standalone_chrome/: Dockerfile
docker/ubuntu/: Dockerfile  Dockerfile.dev
docker/ws_amazon/: Dockerfile  Dockerfile.dev
docker/ws_mercado_livre/: Dockerfile
k8s/base/jobs/: cronjob-app-amazon.yaml  cronjob-app-mercado-livre.yaml
k8s/base/volumes/: airflow-pv.yml  airflow-pvc.yml
k8s/helm/: airflow-values.yml
prometheus/: prometheus.yml
src/: main.py  test_main.py
src/examples/: dbt_example.py  selenium_example.py  selenium_standalone_chrome_example.py
src/fast_api/: test_main.py
src/ws_amazon/: app.py  functions.py  variables.py
src/ws_mercado_livre/: app.py  functions.py  variables.py
