[tool.poetry]
name = "ecommerce-data-analysis"
version = "0.1.0"
description = ""
authors = ["jnyjhow <jhonatan_yamane@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
psutil = "^6.0.0"
cloudscraper = "^1.2.71"
bs4 = "^0.0.2"
prometheus-fastapi-instrumentator = "^7.0.0"
prometheus-client = "^0.20.0"
pyvirtualdisplay = "^3.0"
selenium = "^4.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
